--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <!--userImg-->
                 <div class="user">
-
+                    <img src="user.jpg">
                 </div>
 
             </div>
@@ -90,6 +90,16 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
     <script>
+        //MenuToggle
+        let toggle = document.querySelector('.toggle');
+        let navigation = document.querySelector('.navigation');
+        let main = document.querySelector('.main');
+
+        toggle.onclick = function() {
+            navigation.classList.toggle('active');
+            main.classList.toggle('active');
+        }
+
         //add hoverd class in selected list item//
         let list = document.querySelector('.navigation li');
 
